[package]
name = "etrade-pdf-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pdf = "0.8.1"
pdf-extract = "0.6.5"
euclid = "0.20.5"
lopdf = {version = "0.29", default-features = false, features = ["nom_parser"]}
csv = "1.2.1"
glob = "0.3.1"
